[metadata]
name = i18n-string
version = 0.2.1
summary = MultilingualString Python class that allows to store all translations of the particular string incapsulated into only string like object.
download_url = UNKNOWN
home_page = https://github.com/lig/i18n-string
author = Serge Matveenko
author_email = s@matveenko.ru
classifier = Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License

[files]
modules = i18n_string
extra_files =
    setup.py
    COPYING
